[gd_scene load_steps=12 format=3 uid="uid://jtxwmk58ocay"]

[ext_resource type="Script" path="res://player/bullet.gd" id="1_slq32"]
[ext_resource type="Texture2D" uid="uid://cklfnhar27whn" path="res://player/bullet.png" id="2_uy3a2"]
[ext_resource type="AudioStream" uid="uid://dtkpwsb67qrox" path="res://player/Footsteps_Rock_Walk_08.wav" id="3_5o1lk"]
[ext_resource type="Texture2D" uid="uid://d0op0wc30nuq6" path="res://boulder/boulder.png" id="4_5j52w"]
[ext_resource type="Texture2D" uid="uid://ckbdgqwpujvsp" path="res://boulder/boulder_n.png" id="5_2vggw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ytcp5"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xukwk"]
radius = 2.0

[sub_resource type="Curve" id="Curve_tey7m"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_tdbwg"]
curve = SubResource("Curve_tey7m")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wlq5x"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(2.08165e-12, 2.08165e-12, 1)
emission_ring_height = 1.0
emission_ring_radius = 4.0
emission_ring_inner_radius = 3.0
radial_velocity_min = 10.0
radial_velocity_max = 50.0
gravity = Vector3(2.08165e-12, 98, 2.08165e-12)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_tdbwg")
collision_mode = 2
collision_use_scale = true

[sub_resource type="CanvasTexture" id="CanvasTexture_a1ldq"]
diffuse_texture = ExtResource("4_5j52w")
normal_texture = ExtResource("5_2vggw")

[node name="Bullet" type="RigidBody2D"]
collision_layer = 8
collision_mask = 5
mass = 0.1
continuous_cd = 1
contact_monitor = true
max_contacts_reported = 3
script = ExtResource("1_slq32")

[node name="BulletSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_uy3a2")
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "",
"slice": "",
"source": "res://player/bullet.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "18f3cbd9b696cbf1c8e74d18c86e00ef"

[node name="BulletSmearSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.784314)
show_behind_parent = true
texture_filter = 2
scale = Vector2(2, 0.5)
texture = ExtResource("2_uy3a2")
centered = false
offset = Vector2(-3, -2)
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "",
"slice": "",
"source": "res://player/bullet.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "18f3cbd9b696cbf1c8e74d18c86e00ef"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_ytcp5")

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_xukwk")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(-1.19209e-07, 0)
scale = Vector2(0.2, 0.2)

[node name="BulletSoundPlayer" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_5o1lk")

[node name="HitParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 4
process_material = SubResource("ParticleProcessMaterial_wlq5x")
texture = SubResource("CanvasTexture_a1ldq")
one_shot = true
explosiveness = 1.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="finished" from="BulletSoundPlayer" to="." method="_on_bullet_sound_player_finished"]
[connection signal="finished" from="HitParticles" to="." method="_on_hit_particles_finished"]
